<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/title_template"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar"
        android:background="@color/blue">

        <TextView
            android:id="@+id/new_registration_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_bar"
            android:layout_alignParentTop="true"
            android:padding="@dimen/padding_10"
            android:text="@string/new_registration_text"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/demographics_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_bar"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/padding_10"
            android:text="@string/demographics_text"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"></RelativeLayout>
    <TextView
        android:id="@+id/patient_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_template"
        android:layout_marginTop="@dimen/margin_10"
        android:padding="@dimen/margin_10"
        android:text="@string/patient_information_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_information"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/firstname_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edit_textboxes" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_information"
        android:layout_alignBaseline="@+id/first_name"
        android:layout_alignStart="@+id/lastname_edit"
        android:layout_alignParentEnd="true"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/lastname_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name"
        android:layout_alignBaseline="@+id/firstname_edit"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_textboxes" />


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname_edit"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edit_textboxes" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastname_edit"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="105dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/phonenumber_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_20"
        android:background="@drawable/edit_textboxes" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/address_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar"
        android:layout_below="@+id/address"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_textboxes" />


    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_edit"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/city_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edit_textboxes" />

    <!--    <Spinner-->
    <!--        android:id="@+id/city_spinner"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@+id/city"-->
    <!--        android:layout_marginLeft="@dimen/margin_10"-->
    <!--        android:layout_marginTop="@dimen/margin_10"-->
    <!--        android:layout_marginRight="245dp"-->
    <!--        android:background="@drawable/edit_textboxes"-->
    <!--        android:spinnerMode="dropdown" />-->


    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_edit"
        android:layout_alignBaseline="@+id/city"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="165dp"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/state_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/state"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_20"
        android:background="@drawable/edit_textboxes" />

    <!--    <Spinner-->
    <!--        android:id="@+id/state_spinner"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@+id/state"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:layout_marginLeft="210dp"-->
    <!--        android:layout_marginTop="@dimen/margin_10"-->
    <!--        android:layout_marginRight="15dp"-->
    <!--        android:background="@drawable/edit_textboxes"-->
    <!--        android:spinnerMode="dropdown" />-->

    <TextView
        android:id="@+id/zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_edit"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:text="@string/zipcode"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/zipcode_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zipcode"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edit_textboxes" />


    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/state"
        android:layout_alignBaseline="@+id/zipcode"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="145dp"
        android:text="@string/country"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/country_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_20"
        android:background="@drawable/edit_textboxes" />

    <!--    <Spinner-->
    <!--        android:id="@+id/country_spinner"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:layout_below="@+id/country"-->
    <!--        android:layout_alignStart="@+id/country"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:layout_marginTop="@dimen/margin_10"-->
    <!--        android:layout_marginRight="15dp"-->

    <!--        android:spinnerMode="dropdown" />-->

    <TextView
        android:id="@+id/date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zipcode_edit"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:text="@string/date_of_birth"
        android:textColor="@color/black"
        android:textSize="15sp" />



    <EditText
        android:id="@+id/dateofbirth_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_of_birth"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/date_of_birth_edit" />


    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zipcode_edit"
        android:layout_alignBaseline="@+id/date_of_birth"
        android:layout_marginLeft="@dimen/margin_50"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_toRightOf="@+id/date_of_birth"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/age_edit"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_centerInParent="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/dateofbirth_edit"
        android:background="@drawable/age_edit" />


    <TextView
        android:id="@+id/occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country_edit"
        android:layout_alignBaseline="@+id/date_of_birth"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/occupation"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/occupation_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/occupation"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_14"
        android:background="@drawable/edit_textboxes" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateofbirth_edit"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/marital_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/occupation_edit"
        android:layout_alignBaseline="@+id/gender"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="100dp"
        android:text="@string/marital_status"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/male_button"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:layout_below="@+id/gender"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/parent_bottom_buttons"
        android:text="@string/male"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/female_button"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:layout_below="@+id/gender"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="64dp"
        android:layout_toRightOf="@+id/male_button"
        android:background="@drawable/parent_bottom_buttons"
        android:text="@string/female"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/other_button"
        android:layout_width="50dp"
        android:layout_height="32dp"
        android:layout_below="@+id/gender"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="64dp"
        android:layout_toRightOf="@+id/female_button"
        android:background="@drawable/parent_bottom_buttons"
        android:text="@string/other"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/single_button"
        android:layout_width="50dp"
        android:layout_height="32dp"
        android:layout_below="@+id/marital_status"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="64dp"
        android:layout_toRightOf="@+id/other_button"
        android:background="@drawable/parent_bottom_buttons"
        android:text="@string/single"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/married_button"
        android:layout_width="55dp"
        android:layout_height="32dp"
        android:layout_below="@+id/marital_status"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="64dp"
        android:layout_toRightOf="@+id/single_button"
        android:background="@drawable/parent_bottom_buttons"
        android:text="@string/married"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/divorced_button"
        android:layout_width="59dp"
        android:layout_height="32dp"
        android:layout_below="@+id/marital_status"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="64dp"
        android:layout_toRightOf="@+id/married_button"
        android:background="@drawable/parent_bottom_buttons"
        android:text="@string/divorced"
        android:textAllCaps="false"
        android:textColor="@color/black" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/marital_status"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/save_button"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>


