<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_10"
    >


    <TextView
        android:id="@+id/cancel_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginEnd="@dimen/padding_10"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remove_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/padding_10"
        android:text="@string/remove_room"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_mark" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:layout_marginTop="@dimen/padding_10"
        android:background="@drawable/btn_semicurved"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/remove_room"
        app:layout_constraintTop_toBottomOf="@+id/remove_room" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginTop="@dimen/padding_10"
        android:background="@drawable/btn_semicurved"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/yes_btn"
        app:layout_constraintTop_toBottomOf="@+id/remove_room" />




</androidx.constraintlayout.widget.ConstraintLayout>